# BookDownloader

./: .gitignore  CLAUDE.md  README.md  arachne_downloader.py  downloaded_images  image_downloader.py  image_downloader_factory.py  main.py  prompt.md  pyproject.toml  rara_downloader.py  requirements.txt
config/: .rara_config.yml.un~  arachne_config.yml  archive_extractor_config.yml  archive_pdf_config.yml  rara_config.yml  rara_config.yml~  rara_manifest_config.yml  rara_manifest_finest_churches_of_rome.yml  rara_manifest_four_books_on_architecture.yml  rara_manifest_four_books_on_architecture_vol2.yml  rara_manifest_template.yml
downloader/: batch_archive_pdf_downloader.py  batch_download_images.py  numbered_url_book_downloader.py
factory/: image_downloader_factory.py
generator/: arachne_url_generator.py  rara_url_generator.py
lists/: archive-pdfs.txt  test.txt
prompts/: book_cover_generation.md  intro_deep_research.md
scripts/: create_documentai_processor.py  download_book.py  extract_archives.py  generate_image.py  mcp_image_generator.py  scantailor_command.py
temp_test/: test_simple.py
test-jp2-out/: gri_33125016354728_0001.jp2  gri_33125016354728_0002.jp2  gri_33125016354728_0003.jp2  gri_33125016354728_0004.jp2  gri_33125016354728_0005.jp2  gri_33125016354728_0006.jp2  gri_33125016354728_0007.jp2  gri_33125016354728_0008.jp2  gri_33125016354728_0009.jp2  gri_33125016354728_0010.jp2  gri_33125016354728_0011.jp2  gri_33125016354728_0012.jp2  gri_33125016354728_0013.jp2  gri_33125016354728_0014.jp2  gri_33125016354728_0015.jp2  (+130 more)
(+76 files in other folders)
